manifests/ingress-17.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "kubernetesfourth-c4b0"
    labels:
        app: "kubernetesfourth-c4b0"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: kubernetesfourth93a6-kubernetesfourth-c4b0.8da41d97eba94af891fb.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "kubernetesfourth-c4b0"
                servicePort: 80
